# Shared_ADC

Shared_ADC/: Project_2_Base.uvoptx  Project_2_Base.uvprojx  pemicro_connection_settings.ini
Shared_ADC/Listings/: Project_2_Base.map  startup_mkl25z4.lst
Shared_ADC/Objects/: Project_2_Base.axf  Project_2_Base.build_log.htm  Project_2_Base.htm  Project_2_Base.lnp  Project_2_Base_Target 1.dep  colors.crf  control.crf  control.d  debug.crf  debug.d  delay.crf  delay.d  dma.crf  dma.d  fx.crf  lcd_graphics.crf  lcd_text.crf  leds.crf  leds.d  lucida_12x19.crf  lucida_20x31.crf  lucida_8x13.crf  main.crf  main.d  profile.crf  profile.d  region.crf  rtx_config.crf  rtx_config.d  rtx_lib.crf  sound.crf  sound.d  st7789.crf  st7789.d  system_mkl25z4.crf  t6963.crf  t6963.d  threads.crf  threads.d  timers.crf  (+5 more)
Shared_ADC/RTE/Device/MKL25Z128xxx4/: startup_MKL25Z4.s
Shared_ADC/Source/: UI.c  UI.h  control.c  control.h
Shared_ADC/Source/LCD/: touchscreen.c
Trace_Cache/: .gitignore  CMakeLists.txt  Readme.md
Trace_Cache/riscv-base/: decode.h
Trace_Cache/uarchsim/: BitmapUtils.cc  BitmapUtils.h  CacheClass.cc  CacheClass.h  CircularQueue.h  DataDefine.h  alu.cc  bpred_interface.cc  bpred_interface.h  cache.h  checker.cc  checkpoint.cc  debug.cc  debug.h  decode.cc  dispatch.cc  execute.cc  fetch.cc  fetch_queue.cc  fetch_queue.h  fu.h  histogram.cc  histogram.h  issue_queue.cc  issue_queue.h  lane.cc  lane.h  lsu.cc  lsu.h  main.cc  parameters.cc  parameters.h  payload.cc  payload.h  pipeline.cc  pipeline.h  pipeline_register.cc  pipeline_register.h  register_read.cc  rename.cc  (+13 more)
XINU_Paging/: CMakeLists.txt
XINU_Paging/compile/: .defs  version  xinu.elf  xinu.map
XINU_Paging/config/: config
XINU_Paging/include/: memory.h  paging.h  process.h  prototypes.h
XINU_Paging/shell/: xsh_memstat.c
XINU_Paging/system/: bitmap.c  create.c  getmem.c  initialize.c  intr.S  kill.c  main.c  pagefault_handler.c  paging_util.c  resched.c  vcreate.c  vfree.c  vmalloc.c
