cmake_minimum_required(VERSION 3.13)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -Werror")
project(xinu_paging)
#include_directories(${CMAKE_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/device)
include_directories(${CMAKE_SOURCE_DIR}/lib)
include_directories(${CMAKE_SOURCE_DIR}/net)
include_directories(${CMAKE_SOURCE_DIR}/shell)
include_directories(${CMAKE_SOURCE_DIR}/system)
file(GLOB_RECURSE SRCS *.c)
file(GLOB_RECURSE HDRS *.h)

ADD_EXECUTABLE(xinu  ${SRCS} ${HDRS})
TARGET_LINK_LIBRARIES(xinu)